<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mini Keyboard</string>
    <string name="ime_label">Mini Qwerty Keyboard</string>
    <string name="ime_subtype_en">English (US)</string>
    <string name="ime_subtype_vi">Vietnamese (Telex)</string>

    <string name="theme_title">Theme</string>
    <string name="theme_system">Follow system</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_black">Black (OLED)</string>
    <string name="enable_button">Enable keyboard</string>

    <string name="haptics_title">Haptics</string>
    <string name="haptics_label">Vibration feedback</string>
    <string name="smart_title">Smart Telex</string>
    <string name="smart_label">Smart Telex (English-aware)</string>
    <string name="double_tap_title">Double-tap</string>
    <string name="double_tap_label">Double-tap window: %1$d ms</string>
    <string name="auto_cap_title">Auto-capitalize</string>
    <string name="auto_cap_label">Capitalize first letter of a sentence</string>
    <string name="suggestion_title">Clipboard suggestions</string>
    <string name="suggestion_label">Show paste suggestion strip</string>
    <string name="test_title">Try it out</string>
    <string name="test_hint">Type here to test the keyboard</string>
</resources>
